[workspace]
members = [
    "muspell-core",
    "muspell-daemon",
    "muspell-cli",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Muspell Contributors"]
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/example/muspell"
rust-version = "1.79"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio          = { version = "1.38", features = ["full"] }
tokio-util     = { version = "0.7", features = ["rt"] }

# P2P / Iroh
iroh           = { version = "0.22", features = ["discovery-pkarr-dht"] }
iroh-blobs     = { version = "0.22" }
iroh-docs      = { version = "0.22" }
iroh-gossip    = { version = "0.22" }

# Error handling
anyhow         = { version = "1.0", features = ["backtrace"] }
thiserror      = "1.0"

# Serialisation
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "0.8"

# Configuration
figment        = { version = "0.10", features = ["toml", "env"] }

# CLI
clap           = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = { version = "0.24", optional = true }

# HTTP (health endpoint)
axum           = { version = "0.7", features = ["macros"] }
tower-http     = { version = "0.5", features = ["trace", "cors"] }

# Retry / backoff
backoff        = { version = "0.4", features = ["tokio"] }

# Crypto / hashing
blake3         = "1.5"
ed25519-dalek  = { version = "2.1", features = ["serde"] }

# Networking utils
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url            = { version = "2.5", features = ["serde"] }

# Concurrency primitives
dashmap        = "5.5"
parking_lot    = "0.12"
tokio-stream   = "0.1"
futures        = "0.3"

# Time
chrono         = { version = "0.4", features = ["serde"] }
humantime      = "2.1"
humantime-serde = "1.1"

# Testing
mockall        = "0.12"

# Internal crates
muspell-core   = { path = "muspell-core" }
