[workspace]
members = [
    "muspell-core",
    "muspell-daemon",
    "muspell-cli",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Muspell Contributors"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/example/muspell"
rust-version = "1.79"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio          = { version = "1.38", features = ["full"] }
tokio-util     = { version = "0.7", features = ["rt"] }
tokio-stream   = "0.1"
futures        = "0.3"

# ── P2P / Iroh ────────────────────────────────────────────────────────────────
# 0.35 is the production-stable series. The 0.90+ canary versions are NOT
# recommended for production use per the iroh-blobs maintainers.
iroh           = "0.35"
iroh-blobs     = "0.35"
iroh-gossip    = "0.35"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow         = { version = "1.0", features = ["backtrace"] }
thiserror      = "1.0"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "0.8"

# ── Configuration ─────────────────────────────────────────────────────────────
figment        = { version = "0.10", features = ["toml", "env"] }

# ── CLI ───────────────────────────────────────────────────────────────────────
clap           = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# ── Observability ─────────────────────────────────────────────────────────────
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# ── HTTP (health endpoint) ────────────────────────────────────────────────────
axum           = { version = "0.7", features = ["macros"] }
tower-http     = { version = "0.5", features = ["trace", "cors"] }

# ── Retry / backoff ───────────────────────────────────────────────────────────
backoff        = { version = "0.4", features = ["tokio"] }

# ── Crypto ────────────────────────────────────────────────────────────────────
# ed25519-dalek for signing/verifying ownership proofs independent of iroh's
# internal key types.
ed25519-dalek  = { version = "2.1", features = ["serde", "rand_core"] }
hex            = "0.4"
base64         = "0.22"

# ── HTTP client ───────────────────────────────────────────────────────────────
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url            = { version = "2.5", features = ["serde"] }

# ── Concurrency primitives ────────────────────────────────────────────────────
dashmap        = "5.5"
parking_lot    = "0.12"

# ── Async trait support ───────────────────────────────────────────────────────
async-trait    = "0.1"

# ── Platform utilities ────────────────────────────────────────────────────────
dirs           = "5.0"

# ── Time ──────────────────────────────────────────────────────────────────────
chrono         = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"

# ── Testing ───────────────────────────────────────────────────────────────────
mockall        = "0.12"
rand           = "0.8"

# ── Internal crates ───────────────────────────────────────────────────────────
muspell-core   = { path = "muspell-core" }
